--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <div id="content"></div>
   <canvas id="canvas" style="border:2px solid black;" width="1000px" height="800px">
 </canvas>
-  <script src="./script.js" type="text/javascript"></script>
+  <script src="./../canvas/updateCanvas.js" type="text/javascript"></script>
+  <script src="./../sortingalgorithms/bubbleSort.js" type="text/javascript"></script>
+  <script src="./../sortingalgorithms/insertionSort.js" type="text/javascript"></script>
+  <script src="./../sortingalgorithms/mergeSort.js" type="text/javascript"></script>
+  <script src="./../sortingalgorithms/quickSort.js" type="text/javascript"></script>
+  <script src="./../sortingalgorithms/selectionSort.js" type="text/javascript"></script>
+
 </body>
 </html>
