Put everything in folders

--- a/website/index.html
+++ b/website/index.html
@@ -8,12 +8,12 @@
   <div id="content"></div>
   <canvas id="canvas" style="border:2px solid black;" width="1000px" height="800px">
 </canvas>
-  <script src="./updateCanvas.js" type="text/javascript"></script>
-  <script src="./bubbleSort.js" type="text/javascript"></script>
-  <script src="./insertionSort.js" type="text/javascript"></script>
-  <script src="./mergeSort.js" type="text/javascript"></script>
-  <script src="./quickSort.js" type="text/javascript"></script>
-  <script src="./selectionSort.js" type="text/javascript"></script>
+  <script src="./../canvas/updateCanvas.js" type="text/javascript"></script>
+  <script src="./../sortingalgorithms/bubbleSort.js" type="text/javascript"></script>
+  <script src="./../sortingalgorithms/insertionSort.js" type="text/javascript"></script>
+  <script src="./../sortingalgorithms/mergeSort.js" type="text/javascript"></script>
+  <script src="./../sortingalgorithms/quickSort.js" type="text/javascript"></script>
+  <script src="./../sortingalgorithms/selectionSort.js" type="text/javascript"></script>
 
 </body>
 </html>
