Cleaned up HTML

--- a/website/index.html
+++ b/website/index.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Sorting Algorithms</title>
+    <meta charset="UTF-8">
+    <title>Sorting Algorithms</title>
 </head>
+
 <body>
-  <div id="content"></div>
-  <canvas id="canvas" style="border:2px solid black;" width="1000px" height="800px"></canvas>
-  <div>
-    <input id="number" type="text"></input>
-    <input onclick="addToArray()" value="Add" id="addToArray" type="button"></input>
-    <h1>Your Numbers</h1>
-    <h2 id="yourArray"></h2>
-  </div>
-  <input id="bubble" value="Bubble Sort" type="button"></button>
-  <input id="insertion" value="Insertion Sort" type="button"></button>
-  <input id="merge" value="Merge Sort" type="button"></button>
-  <input id="quick" value="Quick Sort" type="button"></button>
-  <input id="selection" value="Selection Sort" type="button"></button>
-
-  <script src="./script.js" type="text/javascript"></script>
-  <script src="./../canvas/updateCanvas.js" type="text/javascript"></script>
-  <script src="./../sortingalgorithms/bubbleSort.js" type="text/javascript"></script>
-  <script src="./../sortingalgorithms/insertionSort.js" type="text/javascript"></script>
-  <script src="./../sortingalgorithms/mergeSort.js" type="text/javascript"></script>
-  <script src="./../sortingalgorithms/quickSort.js" type="text/javascript"></script>
-  <script src="./../sortingalgorithms/selectionSort.js" type="text/javascript"></script>
-
+    <div id="content"></div>
+    <canvas id="canvas" style="border:2px solid black;" width="1000px" height="800px"></canvas>
+    <div>
+        <input id="number" type="text"></input>
+        <input onclick="addToArray()" value="Add" id="addToArray" type="button"></input>
+        <h1>Your Numbers</h1>
+        <h2 id="yourArray"></h2>
+    </div>
+    <input id="bubble" value="Bubble Sort" type="button">
+    </button>
+    <input id="insertion" value="Insertion Sort" type="button">
+    </button>
+    <input id="merge" value="Merge Sort" type="button">
+    </button>
+    <input id="quick" value="Quick Sort" type="button">
+    </button>
+    <input id="selection" value="Selection Sort" type="button">
+    </button>
+    <script src="./script.js" type="text/javascript"></script>
+    <script src="./../canvas/updateCanvas.js" type="text/javascript"></script>
+    <script src="./../sortingalgorithms/bubbleSort.js" type="text/javascript"></script>
+    <script src="./../sortingalgorithms/insertionSort.js" type="text/javascript"></script>
+    <script src="./../sortingalgorithms/mergeSort.js" type="text/javascript"></script>
+    <script src="./../sortingalgorithms/quickSort.js" type="text/javascript"></script>
+    <script src="./../sortingalgorithms/selectionSort.js" type="text/javascript"></script>
 </body>
+
 </html>
