Added clear button for numbers

--- a/website/index.html
+++ b/website/index.html
@@ -12,6 +12,7 @@
     <div>
         <input id="number" type="text"></input>
         <input onclick="addToArray()" value="Add" id="addToArray" type="button"></input>
+        <input onclick="clearArray()" value="Clear" id="clearArray" type="button"></input>
         <h1>Your Numbers</h1>
         <h2 id="yourArray"></h2>
     </div>
